--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>svelte.js + tailwind.css + parcel.js</title>
+    <title>Svelte App</title>
     <link rel="stylesheet" href="./global.pcss" />
   </head>
 
-  <body class="bg-white antialiased text-gray-800">
+  <body class="antialiased text-gray-800 bg-white" style="padding: 0px; background-color: #F9F9F9; padding-right: 10px;"></body>
     <script defer src="./main.js"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
   </body>
